--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,13 @@ jobs:
         run: python worker.py
 
       - name: Commit and Push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "ExtremeProxyBot"
           git config --global user.email "bot@github.com"
-          git add my_stable_configs.txt my_personal_links.txt
-          git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')" || exit 0
+          # Ensure tracking for all necessary files
+          git add my_stable_configs.txt my_personal_links.txt activity_log.txt
+          # Commit even if no proxies changed (activity_log always changes)
+          git commit -m "Auto-pulse: $(date +'%Y-%m-%d %H:%M')" || exit 0
           git push
