--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Extreme Proxy Update
 
 on:
   schedule:
-    - cron: '0 */3 * * *'
+    # Запуск каждые 3 часа на 27-й минуте (меньше конкуренция на серверах GitHub)
+    - cron: '27 */3 * * *'
   workflow_dispatch:
 
 jobs:
@@ -26,14 +27,19 @@ jobs:
       - name: Execute Worker
         run: python worker.py
 
-      - name: Commit and Push
+      - name: Commit and Force Push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "ExtremeProxyBot"
           git config --global user.email "bot@github.com"
-          # Ensure tracking for all necessary files
+          
+          # Добавляем все важные файлы
           git add my_stable_configs.txt my_personal_links.txt activity_log.txt
-          # Commit even if no proxies changed (activity_log always changes)
-          git commit -m "Auto-pulse: $(date +'%Y-%m-%d %H:%M')" || exit 0
-          git push
+          
+          # Делаем коммит. Если изменений нет, --allow-empty создаст пустой коммит,
+          # который все равно обновит дату активности репозитория для GitHub.
+          git commit -m "Auto-Pulse: $(date +'%Y-%m-%d %H:%M') [Extreme Mode]" --allow-empty
+          
+          # Принудительно пушим изменения
+          git push origin main
